feat: endpoint facturacion end
